[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["lucas <lacerdaodl2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.40.2"
gdown = "^5.2.0"
duckdb = "^1.1.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
